# gamma-timeloop

./: .gitignore  LICENSE  README.md  build_pytimeloop.py  run_gamma_timeloop.sh  run_gamma_timeloop_multiObjective.sh
patches/: update_interface.patch
src/: README.md  gamma_timeloop_env.py  main.py  parse_timeloop_output.py  timeloop_env.py  utils.py
src/in_config/: arch.yaml  problem.yaml  sparse.yaml
src/report/: Gamma-Timeloop.csv  Gamma-Timeloop.txt  arch.yaml  map.yaml  problem.yaml  sparse.yaml
timeloop-python-clone/timeloop-python/: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
timeloop-python-clone/timeloop-python/bindings/: accelergy_interface.cpp  bindings.cpp  config.cpp  gterminate.cpp  mapping.cpp  problem.cpp
timeloop-python-clone/timeloop-python/bindings/model/: engine.cpp  sparse_optimization_info.cpp
timeloop-python-clone/timeloop-python/examples/: model.py  native_model.py  timeloop-model-tmp-accelergy.yaml  timeloop-model.ERT.yaml  timeloop-model.ERT_summary.yaml  timeloop-model.flattened_architecture.yaml
timeloop-python-clone/timeloop-python/include/bindings/: bindings.h  type_casters.h
timeloop-python-clone/timeloop-python/include/bindings/model/: bindings.h
timeloop-python-clone/timeloop-python/pytimeloop/: __init__.py  accelergy_interface.py  config.py  engine.py  mapping.py  model.py  problem.py
timeloop-python-clone/timeloop-python/pytimeloop/app/: model.py
